--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android' version '1.8.22'
+    id 'org.jetbrains.kotlin.android'
 }
 
 // Load keystore properties from local.properties
