--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 plugins {
     id 'com.android.application' version '8.2.2' apply false
+    // id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
 }
 
